Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberTextObj.quorum
class Main
    action Main
        Text v
        v:SetValue(text)
        Test(v)
    end

    action Test(number var)
    end
end
